# snippets

./: .gitignore
.github/workflows/: pages.yml
docs/: apply_cors.sh  corspolicy.json
gh-pages/: README.md  app.js  index.html  package-lock.json  package.json
gh-pages/src/: app.js  index.html
go/: .gitignore
go/anki/: README.md  go.mod  go.sum  main.go
go/fire-and-forget/: go.mod
go/invoicer/: README.md  go.mod  main.go
go/sandbox/: go.mod  main.go
go/translator/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
go/youtrack/: go.mod  go.sum  main.go
javascript/: .gitignore  README.md
javascript/amazon-referral-link-wrapper/: index.html
javascript/ble-cube/: README.md  index.html  package-lock.json  package.json
javascript/ble-heart-monitor/: app.js  deploy.sh  index.html  package.json  pnpm-lock.yaml  styles.css
javascript/qr-code-animation/: index.html
javascript/sandbox/: index.js  package.json
javascript/split-screen/: package.json  pnpm-lock.yaml
javascript/tone-transfer/: app.js  index.html  package.json
javascript/video-processing/: index.html
python/: README.md  pyproject.toml  requirements.txt
python/flask-heroku/: app.py  requirements.txt
python/lqr-solver/: pyproject.toml
python/ode-solver/: balancing_robot.py  dc_motor.py  double_pendulum_sim.py  galaxy_sim.py  mass_on_wheel.py  n_body_gravity_sim.py  ode_solver.py  three_body_gravity_sim.py  two_body_gravity_sim.py
python/ode_solver/: balancing_robot.py  dc_motor.py  double_pendulum_sim.py  lqr_solver.py  (+1 more)
python/sandbox/: pyproject.toml  sandbox.py
(+175 files in other folders)
